--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.15.0"
